--- a/assets/style.css
+++ b/assets/style.css
@@ -218,6 +218,9 @@ body {
 	justify-content: space-between;
 	z-index: 1;
 }
+.service__price p {
+	font-size: 1.2em;
+}
 
 #contact {
 	margin: auto;
